      disappearer, mentalic, mplayer_red, nativeRed, neutron, phony, plastic,
      slim, softgrip, standard, trium, tvisor, xanim)
    * Video can be rotated
    * New GUI message: evSetRotation
    * GUI now officially needs GTK+ and GLib versions 2 (it hadn't compiled
      with versions 1 for quite some time)
    * Support for audio and video bin/cue image playback

  1.1: "We gave up on 1.0"

    Decoders:
    * FFmpeg AAC decoder is now preferred over libfaad2 and the internal
      libfaad2 forked copy has been removed in its favor

    Demuxers:
    * experimental support for using binary Quicktime codecs with -demuxer lavf.
    * correct runtime and average bitrate for VBR (variable bitrate) MP3

    Filters:
    * delogo: allow to change the rectangle based on the time.
    * lavfi: libavfilter filter graphs (experimental).

    Other:
    * -dr support for H.264 B-frames.
    * support adding noise at output resolution with -vo gl:noise-strength=8
    * experimental support for OpenGL ES 1.0 in -vo gl
    * support for PGS (BluRay-compatible), DVB and XSUB subtitles.
    * af_cmdline slave command to change e.g. audio equalizer options at runtime.
    * vo x11: don't hide or show cursor any more if attached to an existing window (-wid)
    * try reconnecting network streams e.g. after network timeouts
    * lots of bug fixes as always (and surely a few new bugs, too :-( )

    GUI: Support for the GUI continues.
    * numerous fixes, improvements and updates
    * UTF-8 support
    * all skin messages available as slave commands (gui <message>)
    * fancy new icon

    Ports:
    * Wine (see DOCS/tech/crosscompile.txt)

    MEncoder:
    * -force-key-frames option to set explicit seek points.

MPlayer (1.0)

  rc4: "Yes We Can"

    GUI: Changes towards removing the GUI
    * The GUI will no longer display any error or warning messages.
    * Special GUI slave commands (gui_*) were removed, along with
      the related key bindings.

    Decoders: